# FolderControl

./: CMakeLists.txt  README.md  interface.cpp  interface.h  main.cpp  res.qrc
view/: tab.cpp  tab.h  window.cpp  window.h
view/about/: about.cpp  about.h  aboutqt.cpp  aboutqt.h
view/duplicatefile/: duplicatefile.cpp  duplicatefile.h
view/emptyfolder/: emptyfolder.cpp  emptyfolder.h
view/removejunk/: removejunk.cpp  removejunk.h
view/textfolder/: textfolder.cpp  textfolder.h
